--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
     <html lang="en">
     <head>
     <meta charset="utf-8">
-    <title>403 Forbidden</title>
+    <title>400 Bad Request</title>
     <meta name="description" content="thexyz.com ">
     <meta name="keywords" content="responsive, bootstrap, flat design, flat ui, portfolio">
     <meta name="author" content="Thexyz">
+    <p style='display:none'>01795509e97764dd6cf81cf164bacb68ad31f491</p>
     <!-- styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
@@ -34,10 +35,8 @@
     <div class="container profile">
       <div class="span3"> <img src="img/sad-thexyz.png"> </div>
       <div class="span5">
-        <h1>403 Forbidden</h1>
-        <h3>You don't have permission to access the requested page.</b></h3>
-        <p>
-        <h3>If you need to unblock your IP, please visit <b><a href="https://ip.thexyz.com">this page.</a></b></h3>
+        <h1>400 Bad Request</h1>
+        <h3>Sorry but that was a very, very bad request</b></h3>
 <p>
 
 </div>
